--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-server": "^19.1.0",
     "@angular/router": "^19.1.0",
     "@angular/ssr": "^19.1.2",
+    "@types/google.maps": "^3.58.1",
+    "@types/googlemaps": "^3.43.3",
     "canvas-polyfill": "^0.0.5",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
