--- a/package.json
+++ b/package.json
@@ -12,16 +12,19 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^19.1.0",
+    "@angular/cdk": "^19.2.19",
     "@angular/common": "^19.1.0",
     "@angular/compiler": "^19.1.0",
     "@angular/core": "^19.1.0",
     "@angular/forms": "^19.1.0",
     "@angular/google-maps": "^19.1.4",
+    "@angular/material": "^19.2.19",
     "@angular/platform-browser": "^19.1.0",
     "@angular/platform-browser-dynamic": "^19.1.0",
     "@angular/platform-server": "^19.1.0",
     "@angular/router": "^19.1.0",
     "@angular/ssr": "^19.1.2",
+    "@swimlane/ngx-charts": "^23.0.1",
     "@types/google.maps": "^3.58.1",
     "@types/googlemaps": "^3.43.3",
     "canvas-polyfill": "^0.0.5",
@@ -39,7 +42,7 @@
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
     "cypress": "^14.0.1",
-    "gsap": "^3.12.7",
+    "gsap": "^3.13.0",
     "jasmine-core": "~5.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
