--- a/angular.json
+++ b/angular.json
@@ -16,7 +16,11 @@
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:application",
-          "options": {
+          "options": {"stylePreprocessorOptions": {
+        "includePaths": [
+          "src"
+        ]
+      },
             "outputPath": "dist/rastreamento",
             "index": "src/index.html",
             "browser": "src/main.ts",
