--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "canvas-polyfill": "^0.0.5",
     "express": "^4.18.2",
     "jwt-decode": "^4.0.0",
+    "ngx-toastr": "^19.1.0",
     "rxjs": "~7.8.0",
     "socket.io-client": "^4.8.1",
     "tslib": "^2.3.0",
